<resources>
    <string name="app_name">Reto8</string>
    <string name="description_ic_delete_forever">ic_delete_forever</string>
    <string name="description_add_button">description_add_button</string>
    <string name="text_add_a_new_enterprise">Add a new enterprise</string>
    <string name="text_name">Name</string>
    <string name="hint_enterprise_name">Enterprise name</string>
    <string name="description_ic_edit">ic_edit</string>
    <string name="helper_required">Required</string>
    <string name="hint_enterprise_phone">Phone</string>
    <string name="hint_enterprise_url">Website url</string>
    <string name="hint_enterprise_email">Email</string>
    <string name="hint_enterprise_classification">Classification</string>
    <string name="hint_enterprise_prod_serv">Products and services</string>
    <string name="edit_enterprise_title_add">Add new enterprise</string>
    <string name="menu_save">Save</string>
    <string name="edit_enterprise_message_add_success">Enterprise added correctly</string>
    <string name="args_id">key_id</string>
    <string name="edit_enterprise_message_update_success">Enterprise updated successfuly</string>
    <string name="edit_enterprise_title_edit">Edit the enterprise</string>
    <string name="dialog_delete_title">Do you want to delete this enterprise?</string>
    <string name="dialog_delete_confirm">Delete</string>
    <string name="dialog_delete_cancel">Cancel</string>
</resources>